--- a/index.html
+++ b/index.html
@@ -6,22 +6,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/8d43c58fe5.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="dist/css/style.min.css">
 
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid">
         <header>
-            <nav class="navbar d-flex">
-                <a href="#"class='text-dark '><h1 class="">SAILOR</h1></a>
-                <button class="button dropdown-toggle" type="button"  data-toggle="dropdown"><span class="text-dark"><i class="fas fa-bars"></i></span></button>
-                <div class="dropdown-menu" >
-                    <button class="dropdown-item" type="button">Home</button><button class="dropdown-item" type="button">Action</button><button class="dropdown-item" type="button">Home</button><button class="dropdown-item" type="button">Home</button><button class="dropdown-item" type="button">Home</button>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light d-lg-flex justify-content-between container">
+                <a class="navbar-brand" href="#">SAILOR</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            About
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Portfolio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Connect</a>
+                      </li>
+                      <li class="nav-item">
+                        <button class="btn btn-danger">Get Started</button>
+                      </li>
+                  </ul>
+
                 </div>
-            </nav>
+              </nav>
+              
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="hero hero text-center text-justify d-flex justify-content-center align-items-center">
+                        <div class="text-light">
+                            <h1>Sequi ea ut et est quaerat</h1>
+                            <p class="ml-lg-5 mr-lg-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut, reprehenderit asperiores ipsum tempore omnis velit libero magnam soluta illum.</p>
+                            <button class="btn btn-danger">Need More</button>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="hero hero text-center text-justify d-flex justify-content-center align-items-center">
+                        <div class="text-light">
+                            <h1>Sequi ea ut et est quaerat</h1>
+                            <p class="ml-lg-5 mr-lg-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut, reprehenderit asperiores ipsum tempore omnis velit libero magnam soluta illum.</p>
+                            <button class="btn btn-danger">Need More</button>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="hero hero text-center text-justify d-flex justify-content-center align-items-center">
+                        <div class="text-light">
+                            <h1>Sequi ea ut et est quaerat</h1>
+                            <p class="ml-lg-5 mr-lg-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut, reprehenderit asperiores ipsum tempore omnis velit libero magnam soluta illum.</p>
+                            <button class="btn btn-danger">Need More</button>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
         </header>
-    </div>
+        <main class="container">
+            <section class="row mt-5">
+                <article class="col-lg-5">
+                    <h2 class="text-uppercase font-weight-bold">eum ipsam laborum deleniti velitena</h2>
+                    <p>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</p>
+                </article>
+                <article class="col-lg-7">
+                    <p>Ullamco laboris nisi ul aliquip ex ea commodo consequat. Duis aute irune dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla qui officia deserunt mollit anim id est laborum</p>
+                    <ul class="list-unstyled">
+                        <li><i class="p-3  fas fa-check-double text-warning"></i> Uilamco laboris nisi ut aliquip ex ea commodo consequa</li>
+                        <li><i class="p-3  fas fa-check-double text-warning"></i> Duis aute irune dolor in reprehenderit in voluptate velit</li>
+                        <li><i class="p-3  fas fa-check-double text-warning"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nobis ad minima nesciunt?</p>
+                    </ul>
+                </article>
+            </section>
+            <section class="pt-5 d-flex justify-content-center flex-wrap">
+                <img src="images/clients/client-1.png" class="img-fluid w-50 col-lg-2 col-md-4 col-sm-4 pr-5 pl-5 pt-3 pb-3" alt="">
+                <img src="images/clients/client-2.png" class="img-fluid w-50 col-lg-2 col-md-4 col-sm-4 pr-5 pl-5 pt-3 pb-3" alt="">
+                <img src="images/clients/client-3.png" class="img-fluid w-50 col-lg-2 col-md-4 col-sm-4 pr-5 pl-5 pt-3 pb-3" alt="">
+                <img src="images/clients/client-4.png" class="img-fluid w-50 col-lg-2 col-md-4 col-sm-4 pr-5 pl-5 pt-3 pb-3" alt="">
+                <img src="images/clients/client-5.png" class="img-fluid w-50 col-lg-2 col-md-4 col-sm-4 pr-5 pl-5 pt-3 pb-3" alt="">
+                <img src="images/clients/client-6.png" class="img-fluid w-50 col-lg-2 col-md-4 col-sm-4 pr-5 pl-5 pt-3 pb-3" alt="">
+            </section>
+            <section class="mt-5 container d-flex flex-lg-row flex-column flex-lg-wrap">
+                <div class="col-lg-6 col-12 mt-4 d-flex loremCard justify-content-between align-items-start row">
+                    <i class=" col-1 mt-3 text-danger   fas fa-briefcase"></i>
+                    <div class='col-10'><h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                </div>
+                <div class="col-lg-6 col-12 mt-4 d-flex loremCard justify-content-between align-items-start row">
+                    <i class=" col-1 mt-3 text-danger   fas fa-tasks"></i>
+                    <div class='col-10'><h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                </div>
+                <div class="col-lg-6 col-12 mt-4 d-flex loremCard justify-content-between align-items-start row">
+                    <i class=" col-1 mt-3 text-danger   fas fa-signal"></i>                    <div class='col-10'><h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                </div>
+                <div class="col-lg-6 col-12 mt-4 d-flex loremCard justify-content-between align-items-start row">
+                    <i class=" col-1 mt-3 text-danger   fas fa-binoculars"></i>
+                    <div class='col-10'><h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                </div>
+                <div class="col-lg-6 col-12 mt-4 d-flex loremCard justify-content-between align-items-start row">
+                    <i class=" col-1 mt-3 text-danger   fas fa-sun"></i>
+                    <div class='col-10'><h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                </div>
+                <div class="col-lg-6 col-12 mt-4 d-flex loremCard justify-content-between align-items-start row">
+                    <i class=" col-1 mt-3 text-danger   fas fa-calendar-alt"></i>
+                    <div class='col-10'><h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                </div>
+            </section>
+        </main>
     <script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/popper.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
