--- a/index.html
+++ b/index.html
@@ -65,30 +65,29 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <div class="hero hero text-center text-justify d-flex justify-content-center align-items-center">
-                        <div class="text-light">
+                    <img class="img-fluid" src="images/slide/slide-1.jpg" alt="">
+                    <div class="text-center text-justify text-light carousel-caption">
                             <h1>Sequi ea ut et est quaerat</h1>
                             <p class="ml-lg-5 mr-lg-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut, reprehenderit asperiores ipsum tempore omnis velit libero magnam soluta illum.</p>
                             <button class="btn btn-danger">Need More</button>
-                        </div>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="hero hero text-center text-justify d-flex justify-content-center align-items-center">
-                        <div class="text-light">
-                            <h1>Sequi ea ut et est quaerat</h1>
+                    <img class="img-fluid" src="images/slide/slide-2.jpg" alt="">
+
+                    <div class="text-center text-justify text-light carousel-caption">
+              <h1>Sequi ea ut et est quaerat</h1>
                             <p class="ml-lg-5 mr-lg-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut, reprehenderit asperiores ipsum tempore omnis velit libero magnam soluta illum.</p>
                             <button class="btn btn-danger">Need More</button>
-                        </div>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="hero hero text-center text-justify d-flex justify-content-center align-items-center">
-                        <div class="text-light">
-                            <h1>Sequi ea ut et est quaerat</h1>
+                    <img class="img-fluid" src="images/slide/slide-3.jpg" alt="">
+
+                    <div class="text-center text-justify text-light carousel-caption">
+              <h1>Sequi ea ut et est quaerat</h1>
                             <p class="ml-lg-5 mr-lg-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut, reprehenderit asperiores ipsum tempore omnis velit libero magnam soluta illum.</p>
                             <button class="btn btn-danger">Need More</button>
-                        </div>
                     </div>
                   </div>
                 </div>
