--- a/index.html
+++ b/index.html
@@ -156,7 +156,78 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
                 </div>
             </section>
+            <section>
+              <ul class="navbar-nav flex-row funi m-auto">
+                <li class="nav-item active"><button class="btn btn-danger btn-cus">All</button></li>
+                <li class="nav-item "><button class="btn btn-light btn-cus">App</button></li>
+                <li class="nav-item "><button class="btn btn-light btn-cus">Card</button></li>
+                <li class="nav-item "><button class="btn btn-light btn-cus">Web</button></li>
+              </ul>
+              <div class="d-flex flex-wrap">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-1.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-2.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-3.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-6.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-5.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-4.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-7.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-8.jpg" alt="">
+              <img class="img-fluid pt-3 pr-2 pl-2 img-lg-cus"   src="images/portfolio/portfolio-9.jpg" alt="">
+              </div>
+            </section>
         </main>
+        <footer class="mt-3 text-light">
+          <section class="row bg-secondary text-light p-5">
+            <article class="col-lg-3 mt-3 mb-1">
+              <h3>Sailor</h3>
+              <div class="">
+                <p>A108 Adam Street</p>
+                <p>NY 535022, USA</p>
+              </div>
+              <div class="">
+                <p><strong>Phone:</strong> +1 5589 55488 55</p>
+                <p><strong>Email:</strong> info@example.com</p>
+              </div>
+              <div>
+                <a href="" class="text-light btn btn-secondary"><i class="fab fa-twitter"></i></a><a href="" class="text-light btn btn-secondary"><i class="fab fa-facebook-f"></i></a><a href="" class="text-light btn btn-secondary"><i class="fab fa-instagram"></i></a><a href="" class="text-light btn btn-secondary"><i class="fab fa-skype"></i></a><a href="" class="text-light btn btn-secondary"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+            </article>
+            <article class="col-lg-2 mt-3 mb-1">
+              <h4>Useful Links</h4>
+              <ul class="list-unstyled">
+                <li class="mb-2"><a href="" class="text-light"><i class="fas fa-angle-right"></i> Home</a></li>
+                <li class="mb-2"><a href="" class="text-light"><i class="fas fa-angle-right"></i> About us</a></li>
+                <li class="mb-2"><a href="" class="text-light"><i class="fas fa-angle-right"></i> Services</a></li>
+                <li class="mb-2"><a href="" class="text-light"><i class="fas fa-angle-right"></i> Terms of service</a></li>
+                <li class="mb-2"><a href="" class="text-light"><i class="fas fa-angle-right"></i> Privacy policy</a></li>
+              </ul>
+            </article>
+            <article class="col-lg-3 mt-3 mb-1">
+              <h4>Our Services</h4>
+              <ul class="list-unstyled">
+                <li class="mb-2"><a href="" class="text-light"> <i class="fas fa-angle-right"></i> Web Design</a></li>
+                <li class="mb-2"><a href="" class="text-light"> <i class="fas fa-angle-right"></i> Web Development</a></li>
+                <li class="mb-2"><a href="" class="text-light"> <i class="fas fa-angle-right"></i> Product Management</a></li>
+                <li class="mb-2"><a href="" class="text-light"> <i class="fas fa-angle-right"></i> Marketing</a></li>
+                <li class="mb-2"><a href="" class="text-light"> <i class="fas fa-angle-right"></i> Graphic Design</a></li>
+              </ul>
+            </article>
+            <article class="col-lg-4 mt-3 mb-1">
+              <h4>Our Newsletter</h4>
+              <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+              <form action="">
+                <div class="form-group d-flex">
+                  <input type="email" name="" id="" class="form-control rounded-0">
+                  <button class="btn btn-danger rounded-0">Subscribe</button>
+                </div>
+              </form>
+            </article>
+          </section>
+          <section class="bg-secondary text-center p-4">
+            <p class="m-0">&#169; Copyright <strong>Sailor</strong>. All Rights Reserved</p>
+            <p class="m-0"><small>Designed by BootstrapMade</small></p>
+          </section>
+        </footer>
     <script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/popper.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
